--- a/LeadScoring.ipynb
+++ b/LeadScoring.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM+O4qFlhLWJOlzo8Z1BMho",
+      "authorship_tag": "ABX9TyOkMw8v4Pr3LDwB1HOAsMgq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,27 @@
         "from keras.layers import Dense  "
       ],
       "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4cIZaKUumFLu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# This Python 3 environment comes with many helpful analytics libraries installed\n",
+        "# It is defined by the kaggle/python docker image: https://github.com/kaggle/docker-python\n",
+        "# For example, here's several helpful packages to load in \n",
+        "\n",
+        "import numpy as np # linear algebra\n",
+        "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+        "\n",
+        "# Input data files are available in the \"../input/\" directory.\n",
+        "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
